HMAN-887- fix IT