@@ -880,7 +880,7 @@ class HearingManagementControllerIT extends BaseTest {
     @Test
     void shouldReturn200_WhenGetHearingsForListOfCasesForCaseRefNotInDB() throws Exception {
         List<String> caseRefs = Arrays.asList("9372710950276245");
-        stubReturn200ForAllCasesFromDataStore(caseRefs, new ArrayList<>());
+        stubReturn200ForAllCasesFromDataStore(caseRefs, new ArrayList<>(), CASE_TYPE);
         mockMvc.perform(get("/hearings")
                             .param("ccdCaseRefs", "9372710950276245")
                             .param("caseTypeId", CASE_TYPE)
@@ -893,7 +893,7 @@ class HearingManagementControllerIT extends BaseTest {
     @Sql(scripts = {DELETE_HEARING_DATA_SCRIPT, GET_HEARINGS_DATA_SCRIPT})
     void shouldReturn200_WhenGetHearingsForListOfCasesForOneCaseRef() throws Exception {
         List<String> caseRefs = Arrays.asList("9372710950276233", "9372710950276239");
-        stubReturn200ForAllCasesFromDataStore(caseRefs, caseRefs);
+        stubReturn200ForAllCasesFromDataStore(caseRefs, caseRefs, CASE_TYPE);
         mockMvc.perform(get("/hearings")
                             .param("ccdCaseRefs", "9372710950276233", "9372710950276239")
                             .contentType(MediaType.APPLICATION_JSON_VALUE)
@@ -909,7 +909,7 @@ class HearingManagementControllerIT extends BaseTest {
     @Sql(scripts = {DELETE_HEARING_DATA_SCRIPT, GET_HEARINGS_DATA_SCRIPT})
     void shouldReturn200_WhenGetHearingsForListOfCasesForCaseRef_Listed() throws Exception {
         List<String> caseRefs = Arrays.asList("9372710950276233","9856815055686759");
-        stubReturn200ForAllCasesFromDataStore(caseRefs, Arrays.asList(caseRefs.get(1)));
+        stubReturn200ForAllCasesFromDataStore(caseRefs, Arrays.asList(caseRefs.get(1)), CASE_TYPE);
         mockMvc.perform(get("/hearings")
                             .param("ccdCaseRefs", "9372710950276233", "9856815055686759")
                             .contentType(MediaType.APPLICATION_JSON_VALUE)
@@ -925,7 +925,7 @@ class HearingManagementControllerIT extends BaseTest {
     @Sql(scripts = {DELETE_HEARING_DATA_SCRIPT, GET_HEARINGS_DATA_SCRIPT})
     void shouldReturn200_WhenGetHearingsForListOfCasesForCaseRef_NotListed() throws Exception {
         List<String> caseRefs = Arrays.asList("9372710950276233","9856815055686759");
-        stubReturn200ForAllCasesFromDataStore(caseRefs, Arrays.asList(caseRefs.get(0)));
+        stubReturn200ForAllCasesFromDataStore(caseRefs, Arrays.asList(caseRefs.get(0)), CASE_TYPE);
         mockMvc.perform(get("/hearings")
                             .param("ccdCaseRefs", "9372710950276233", "9856815055686759")
                             .contentType(MediaType.APPLICATION_JSON_VALUE)
@@ -941,7 +941,7 @@ class HearingManagementControllerIT extends BaseTest {
     @Sql(scripts = {DELETE_HEARING_DATA_SCRIPT, GET_HEARINGS_DATA_SCRIPT})
     void shouldReturn200_WhenGetHearingsForListOfCasesForCaseRef_NoStatus() throws Exception {
         List<String> caseRefs = Arrays.asList("9372710950276233","9856815055686759");
-        stubReturn200ForAllCasesFromDataStore(caseRefs,Arrays.asList(caseRefs.get(0)));
+        stubReturn200ForAllCasesFromDataStore(caseRefs,Arrays.asList(caseRefs.get(0)), CASE_TYPE);
         mockMvc.perform(get("/hearings")
                             .param("ccdCaseRefs", "9372710950276233", "9856815055686759")
                             .contentType(MediaType.APPLICATION_JSON_VALUE)
@@ -955,16 +955,16 @@ class HearingManagementControllerIT extends BaseTest {
     @Test
     @Sql(scripts = {DELETE_HEARING_DATA_SCRIPT, GET_HEARINGS_DATA_SCRIPT})
     void shouldReturn200_WhenGetHearingsForListOfCasesForAllCaseTypeIds() throws Exception {
-        List<String> caseRefs = Arrays.asList("9372710950276233", "9372710950276239");
-        stubReturn200ForAllCasesFromDataStore(caseRefs, caseRefs);
+        List<String> caseRefs = List.of("9372710950276233", "9856815055686759");
+        stubReturn200ForAllCasesFromDataStore(caseRefs, caseRefs, "*");
         mockMvc.perform(get("/hearings")
-                            .param("ccdCaseRefs", "9372710950276233", "9372710950276239")
+                            .param("ccdCaseRefs", "9372710950276233", "9856815055686759")
                             .contentType(MediaType.APPLICATION_JSON_VALUE)
                             .param("caseTypeId", "*"))
             .andExpect(status().is(200))
             .andExpect(jsonPath("$.*", hasSize(2)))
             .andExpect(jsonPath("$[0].caseRef").value("9372710950276233"))
-            .andExpect(jsonPath("$[1].caseRef").value("9372710950276239"))
+            .andExpect(jsonPath("$[1].caseRef").value("9856815055686759"))
             .andReturn();
     }
 
